--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -106,6 +106,24 @@ h4 {
 
   }
 
+  @media (max-width: 800px) {
+    footer {
+      small {
+        display: block;
+        float: none;
+        margin-bottom: 1em;
+      }
+      ul {
+        float: none;
+        padding: 0;
+        li {
+          float: none;
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
   .title {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
