--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,7 @@
           </div>
           <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
           id="bs-example-navbar-collapse-1">
-            <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "All recipes", all_recipes_path %></li>
+            <li><%= link_to "Home", root_path %></li>            
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories</a>
               <ul class="dropdown-menu">                  
@@ -28,9 +27,22 @@
                   <li><%= link_to "All recipes", all_recipes_path %></li>
               </ul> 
             </li>
-            <li><%= link_to "Add recipes", new_recipe_path %></li>             
-            <li><%= link_to "Help", help_path %></li>                     
-            <li><%= link_to "Log in", "#" %></li>             
+            <li><%= link_to "Help", help_path %></li> 
+            <% if logged_in? %>
+              <li><%= link_to "Users", "#"%>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account</a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Add recipes", new_recipe_path %></li>  
+                  <li><%= link_to "Profile", current_user %></li>
+                  <li><%= link_to "Settings", "#" %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+                </ul>
+              </li>
+            <% else %>             
+              <li><%= link_to "Log in", login_path %></li>   
+            <% end %>          
           </ul>
         </nav>
     </div>
