--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,9 +33,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account</a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Add recipes", new_recipe_path %></li>  
+                  <li><%= link_to "Add recipes", new_recipe_path %></li>                  
                   <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Settings", "#" %></li>
+                  <li><%= link_to "Update profile", edit_user_path(current_user) %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Log out", logout_path, method: "delete" %></li>
                 </ul>
