--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,12 @@
             </h1>
         </section>
     </aside>
+    <div class="col-md-8">
+        <% if @user.recipes.any? %>
+            <h3>Recipes (<%= @user.recipes.count %>) </h3>
+            <ol class="recipes">
+                <%= render @recipes %>
+            </ol>            
+        <% end %>
+    </div>
 </div>
