--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -43,11 +43,11 @@ h1 {
 }
 
 h2 {
-    font-size: 1.2em;
+    font-size: 36px;
     letter-spacing: -1px;
     margin-bottom: 30px;
-    text-align: left;
-    font-weight: normal;
+    text-align: center;
+    font-weight: 700;
     color: $gray-light;
   }
 
@@ -64,8 +64,7 @@ h4 {
     float: left;
     margin-right: 10px;
     font-size: 1.7em;
-    color: #1abc9c;
-    text-transform: uppercase;
+    color: #1abc9c;    
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
@@ -79,6 +78,28 @@ h4 {
     background-image: url("pasta.jpg");
     background-size: 100% 100%;
   }
+
+  #about.jumbotron {
+    background-image: url("vegetables.jpg");
+    background-size: 100% 100%;
+  }
+
+  #contact.jumbotron {
+    background-image: url("berries.jpg");
+  }
+
+  .text {
+    text-align: left;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-left: 40px;
+    margin-right: 40px;
+    text-indent:40px
+  }
+
+  
 
   
 
@@ -95,14 +116,15 @@ h4 {
         color: #222;
       }
     }
-    ul {
-        float: right;
-        list-style: none;
-        li {
-          float: left;
-          margin-left: 15px;
-        }
+     ul {
+      float: right;
+      list-style: none;
+      
+      li {
+        float: left;
+        margin-left: 15px;
       }
+    }
 
   }
 
@@ -163,22 +185,22 @@ input[type=file]::file-selector-button {
 }
 
 .box {
-  box-shadow:
+  /*box-shadow:
   0 2.8px 2.2px rgba(0, 0, 0, 0.034),
   0 6.7px 5.3px rgba(0, 0, 0, 0.048),
   0 12.5px 10px rgba(0, 0, 0, 0.06),
-  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.034),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.034),
   0 100px 80px rgba(0, 0, 0, 0.12)
-;
+;*/
   display: flex;
   justify-content: center;
 }
 
-.recipe-title {
+/*.recipe-title {
   text-align: left;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+}*/
 
 hr {
   margin-top: 1rem;
@@ -236,6 +258,11 @@ aside {
 
 .card-deck .card{
     padding-bottom:50px;
+}
+
+.buttons {
+  text-align: right;
+  margin-top: 20px;
 }
 
 
