--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,26 @@
-<% provide(:title, "About")%>
+<% provide(:title, "About")%>   
+    
+<div class="container-fluid bg-3 text-center"> 
 
-<h1>About</h1>
-    <%= image_tag "vegetable-outlines-4898185_640.png" %>
-    <p>
-      Recipes is here to help you cook delicious meals with less stress and more joy. 
-      We offer recipes and cooking advice for home cooks, by home cooks. 
-      Helping create “kitchen wins” is what we’re all about.
-    </p>
+    <div class="center jumbotron" id="about">      
+    <br><br><br><br><br><br> <br><br><br><br><br><br>  
+     </div>
+     <div class="text" style="padding-left:200px; padding-right: 200px;">
+      <h1>About</h1>      
+      
+      <p>So! You decided you want to eat healthier. Good job! You perused a few delicious recipes, 
+      got yourself to the grocery store, and bought some ingredients. Then you got in the kitchen and 
+      remembered… wait. You actually have to cook. You hate to cook. It's such a chore. </p>
+      <p>You're not alone. One of the surest ways to eat more healthy is to cook at home, but cooking is 
+      often right up there with house cleaning and yard work as among the last things some of us actually want to do most nights when 
+      we get home from work. </p>      
+      <p> We are here to help you with some advice. First, find a recipe you think your 
+       family will enjoy that doesn’t require a lot of time, preparation, or ingredients you aren’t familiar 
+       with. Then, make another a few days later and slowly build up to cooking daily.</p>
+      <p>Second, pick recipes that excite you. It’s easier to dive into a recipe you’re really 
+      looking forward to than one that’s not so thrilling. Finding recipes that align with what you’re in 
+      the mood for is the best strategy. When you’re considering what to make for dinner, find recipes that 
+      use ingredients you have on hand or something you’ve been craving. That's what we are here for, to 
+      offer you a multitude of easy and tasty recipes</p>      
+    </div>
+</div>
