--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,16 @@
 <% provide(:title, "Contact")%>
 
-<h1>Contact</h1
-
-<p>
-    Have something you’d like to let us know? Whether you have a comment on a recipe or an idea to share,
-     we would love to hear from you: contact@recipes.com.
-     For press inquiries, email us at contact@recipes.com.
-</p>
+<div class="container-fluid bg-3 text-center"> 
+    <div class="center jumbotron" id="contact">      
+        <br><br><br><br><br><br> <br><br><br><br><br><br>  
+    </div>
+    <div class="text" style="padding-left:200px; padding-right: 200px;">
+      <h1>Contact</h1> 
+      <p>Have something you’d like to let us know? Whether you have a comment on a recipe or an idea to share,
+          we would love to hear from you: contact@easycooking.com. For press inquiries, email us at 
+          contact@easycooking.com.</p>
+      <p>We are always on the lookout for new expert voices to join our team of recipe developers and writers. 
+         Please submit pitches along with three examples of your published work (print or online) and a brief 
+         bio to write@easycooking.com.</p>
+    </div>
+</div>
