--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,28 +5,22 @@
     <h4><%= @category.description %></h4>
     <br><br><br>
 </div>
-<div class="row">
+<div class="card-deck">
     <% @recipes.each do |item| %>        
-        <div class="col-sm-4">
-            <div class="box"> 
-               <article class="media">   
-                    <div class="media-content">
-                        <div class="content">          
-                            <%= image_tag(item.display_image, class:"img-fluid w-100 img-rounded") if item.image.attached? %> 
-                            <p class="title">
-                                <br>
-                                <%= link_to item.name, recipe_path(item.id) %>
-                                <br><br>
-                            </p>              
-                            <p class="body">                                                   
-                                <%= item.content %>          
-                            </p>
-                            <span class="user">By: <%= link_to item.user.name, item.user %></span>  
-                            <span style="float:right;">Posted <%= time_ago_in_words(item.created_at) %> ago.</span>                         
-                        </div> 
-                    </div>
-                </article>
-            </div>          
+        <div class="card">
+            <%= image_tag(item.display_image, class:"img-fluid w-100 img-rounded") if item.image.attached? %>
+            <div class="card-body">
+                <p class="title">
+                    <br>
+                    <%= link_to item.name, recipe_path(item.id) %>
+                    <br><br>
+                </p>              
+                <p class="card-text"><%= item.content %></p>
+            </div>
+            <div class="card-footer">
+                <span class="user">By: <%= link_to item.user.name, item.user %></span>  
+                <span style="float:right;">Posted <%= time_ago_in_words(item.created_at) %> ago.</span>                         
+            </div> 
         </div>
     <% end %>
 </div>
