--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-default">
     <div class="container">
-        <%= link_to "recipes", root_path, id: "logo" %>     
+        <%= link_to "EasyCooking", root_path, id: "logo" %>     
         <nav>
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
@@ -14,10 +14,9 @@
             </button>
           </div>
           <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
-          id="bs-example-navbar-collapse-1">
-            <li><%= link_to "Home", root_path %></li>            
+          id="bs-example-navbar-collapse-1">                        
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recipes</a>
               <ul class="dropdown-menu">                  
                   <li><%= link_to "Breakfast", category_path(1) %></li>
                   <li><%= link_to "Lunch", category_path(2) %></li>
@@ -26,10 +25,8 @@
                   <li class="divider"></li>
                   <li><%= link_to "All recipes", all_recipes_path %></li>
               </ul> 
-            </li>
-            <li><%= link_to "Help", help_path %></li> 
-            <% if logged_in? %>
-              <li><%= link_to "Users", "#"%>
+            </li>             
+            <% if logged_in? %>              
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account</a>
                 <ul class="dropdown-menu">
