--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,19 +1,24 @@
 <% provide(:title, @recipe.name) %>
 
-<div class="recipe">        
-    <h1 class="recipe-title"><%= @recipe.name %></h1>
+<div class="recipe">    
     <% if logged_in? %>
+    <div class="buttons">
         <%= link_to "Edit recipe", edit_recipe_path %> |
         <%= link_to 'Back', :back %>
+    <div>
     <% end %>
-    <h3>                                                   
-        <%= @recipe.content %>
-         <hr/>           
-    </h3>  
-                             
+    <h2 class="recipe-title"><%= @recipe.name %></h2>    
+    <div class="text" style="padding-left:200px; padding-right: 200px;">                                                   
+        <%= @recipe.content %>                   
+    </div>  
+    <hr/>                          
     <div class="text-center">
         <%= image_tag(@recipe.display_image, class:"img-rounded") if @recipe.image.attached? %>              
-     </div>             
+     </div>
+     <br>
+     <div class="text" style="padding-left:200px; padding-right: 200px;">                                                   
+        <%= simple_format(@recipe.details) %>                   
+    </div>               
                           
 </div> 
            
