--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, @recipe.name) %>
 
 <div class="recipe">    
-    <% if logged_in? %>
+    <% if logged_in? && current_user?(@recipe.user) %>
     <div class="buttons">
         <%= link_to "Edit recipe", edit_recipe_path %> |
         <%= link_to 'Back', :back %>
