Add role admin to users and delete button to recipes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -101,8 +101,6 @@ h4 {
 
   
 
-  
-
   /* footer */
 
   footer {    
@@ -242,7 +240,7 @@ aside {
 }
 
 .gravatar {
-  float: left;
+  float: right;
   margin-right: 10px;
 }
 
