--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,15 @@
-<footer class="footer">
-  <div style="width: 50%; padding-left: 40px;">
-    <%= link_to "EasyCooking", root_path, id: "logo" %>  
-  </div> 
-  <nav class="navbar fixed-bottom navbar-light bg-light">
-    <ul>
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><%= link_to "Help", help_path %></li>      
-    </ul>
+<footer class="footer"> 
+  <nav class="navbar is-fixed-bottom is-light" role="navigation">
+    <div class="navbar-brand">     
+      <%= link_to "EasyCooking", root_path, id: "logo", class: "navbar-item" %>  
+    </div>
+    <div class="navbar-menu">  
+      <div class="navbar-end">
+        <%= link_to "Home", root_path, class: "navbar-item" %>
+        <%= link_to "About", about_path, class: "navbar-item" %>
+        <%= link_to "Contact", contact_path, class: "navbar-item" %>
+        <%= link_to "Help", help_path, class: "navbar-item" %>   
+      </div>
+    </div>
   </nav>
 </footer>
