--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,46 +1,52 @@
-<header class="navbar navbar-fixed-top navbar-default">
-    <div class="container">
-        <%= link_to "EasyCooking", root_path, id: "logo" %>     
-        <nav>
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1"
-                    aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
-          id="bs-example-navbar-collapse-1">                        
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recipes</a>
-              <ul class="dropdown-menu">                  
-                  <li><%= link_to "Breakfast", category_path(1) %></li>
-                  <li><%= link_to "Lunch", category_path(2) %></li>
-                  <li><%= link_to "Dinner", category_path(3) %></li>
-                  <li><%= link_to "Dessert", category_path(4) %></li>
-                  <li class="divider"></li>
-                  <li><%= link_to "All recipes", all_recipes_path %></li>
-              </ul> 
-            </li>             
-            <% if logged_in? %>              
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account</a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Add recipes", new_recipe_path %></li>                  
-                  <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Update profile", edit_user_path(current_user) %></li>
-                  <li class="divider"></li>
-                  <li><%= link_to "Log out", logout_path, method: "delete" %></li>
-                </ul>
-              </li>
-            <% else %>             
-              <li><%= link_to "Log in", login_path %></li>   
-            <% end %>          
-          </ul>
-        </nav>
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <%= link_to "EasyCooking", root_path, id: "logo", class: "navbar-item" %>     
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample" 
+        onclick="document.querySelector('.navbar-menu').classList.toggle('is-active');">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
     </div>
-</header>
+    <div id="navbarBasicExample" class="navbar-menu">
+         <div class="navbar-start">
+            <div class="navbar-item has-dropdown is-hoverable">                  
+              <a class="navbar-link">Recipes</a>
+                <div class="navbar-dropdown">                 
+                  <%= link_to "Breakfast", category_path(1), class: "navbar-item" %>
+                  <%= link_to "Lunch", category_path(2), class: "navbar-item" %>
+                  <%= link_to "Dinner", category_path(3), class: "navbar-item" %>
+                  <%= link_to "Dessert", category_path(4), class: "navbar-item" %>
+                  <hr class="navbar-divider">
+                  <%= link_to "All recipes", all_recipes_path, class: "navbar-item" %>
+                </div> 
+            </div> 
+          </div>
+          <div class="navbar-end">                     
+              <% if logged_in? %>   
+                <% if current_user.admin? %>
+                <div class="navbar-item">
+                    <span class="tag is-primary">Admin</span>
+                </div>
+                <% end %>           
+                <div class="navbar-item has-dropdown is-hoverable">  
+                  <a class="navbar-link">Account</a>
+                    <div class="navbar-dropdown">
+                      <%= link_to "Add recipes", new_recipe_path, class: "navbar-item" %>                 
+                      <%= link_to "Profile", current_user, class: "navbar-item" %>
+                      <%= link_to "Update profile", edit_user_path(current_user), class: "navbar-item" %>
+                      <hr class="navbar-divider">
+                      <%= link_to "Log out", logout_path, method: "delete", class: "navbar-item"%>
+                    </div>                  
+                </div>                
+              <% else %>
+                 <div class="navbar-item"> 
+                    <div class="buttons">   
+                      <%= link_to "Log in", login_path, class: "button is-primary" %>
+                      <%= link_to "Sign up", signup_path, class: "button is-light" %>
+                    </div> 
+                  </div>  
+              <% end %>          
+    </div>
+</nav>
+    
