--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,11 +1,20 @@
 <% provide(:title, @recipe.name) %>
 
-<div class="recipe">    
+<div class="recipe">     
+
     <% if logged_in? && current_user?(@recipe.user) %>
-    <div class="buttons">
-        <%= link_to "Edit recipe", edit_recipe_path %> | <%= link_to "Delete", @recipe, method: :delete, 
-                                                            data: {confirm: "Are you sure?"}%>
-    </div>
+   
+    <nav class="level">
+        <div class="level-left is-mobile">                            
+            <%= link_to edit_recipe_path, class: "level-item" do %>
+                <p class="control has-text-grey">Edit</p>
+            <%end%>
+            <%= link_to @recipe, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} do %>
+                <p class="control has-text-grey">Delete</p>
+            <%end%>
+        </div>
+    </nav>
+
     <% elsif logged_in? && current_user.admin? && !current_user?(@recipe.user) %>
      <div class="buttons">
         <%= link_to "Delete", @recipe, method: :delete, data: {confirm: "Are you sure?"}%>
@@ -13,8 +22,6 @@
     <% end %>    
     
     <%= link_to 'Back', :back %>
-
-    
     
     <h2 class="recipe-title"><%= @recipe.name %></h2>    
     <div class="text" style="padding-left:200px; padding-right: 200px;">                                                   
