--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,27 +1,42 @@
 <% provide(:title, @category.name) %>
-<div class="content">
-    <br><br><br>
-    <p class="subtitle is-2 "><%= @category.name %></p>    
-    <p class="subtitle is-4"><%= @category.description %></p>
-        
-</div>   
-    <div class="card-deck">
-        <% @recipes.each do |item| %>        
-            <div class="card">
-                <%= image_tag(item.display_image, class:"img-fluid w-100 img-rounded") if item.image.attached? %>
-                <div class="card-body">
-                    <p class="title">
+
+<div class="section">
+    <div class="container">
+        <h1><%= @category.name %></h1>
+        <p class="subtitle is-4"><%= @category.description %></p> 
+        <div class="recipes">       
+            <% @recipes.each do |item| %>           
+                    <div class="card">
+                        <div class="card-image">
+                            <%= link_to recipe_path(item.id) do %> 
+                                <figure class="image is-4by3">          
+                                    <%= image_tag(item.display_image, class:"img-fluid w-100 img-rounded")  if item.image.attached? %> 
+                                </figure>
+                            <% end %>
+                        </div> 
                         <br>
-                        <%= link_to item.name, recipe_path(item.id) %>
-                        <br><br>
-                    </p>              
-                    <p class="card-text"><%= item.content %></p>
-                </div>
-                <div class="card-footer">
-                    <span class="user">By: <%= link_to item.user.name, item.user %></span>  
-                    <span style="float:right;">Posted <%= time_ago_in_words(item.created_at) %> ago.</span>                         
-                </div> 
-            </div>
-        <% end %>
+                        <div class="card-content">                                  
+                            <%= link_to recipe_path(item.id) do %>
+                                <p class="subtitle is-4" style="color: #1abc9c;">
+                                    <%= item.name %>
+                                </p>
+                            <% end %>
+                            <div class="content">                
+                                <%= item.content %> 
+                            </div>                            
+                        </div>
+                        <div>
+                            <footer class="card-footer">                         
+                                
+                            <p>Posted <%= time_ago_in_words(item.created_at) %> ago by: <%= link_to item.user.name, item.user %></p>                               
+                              
+                            </footer>
+                        </div>   
+                    </div>          
+                    
+            
+            <% end %>
+        </div>
     </div>
+</div>
 
